--- a/views/layout/base.templ
+++ b/views/layout/base.templ
@@ -6,6 +6,7 @@ import (
 
 	"guitarrich/xmcloud/model"
 	"guitarrich/xmcloud/sitecore/render/fields"
+	"guitarrich/xmcloud/middleware/editing"
 )
 
 templ Base(data model.Rendered) {
@@ -22,7 +23,7 @@ templ Base(data model.Rendered) {
 				href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
 				rel="stylesheet"
 			/>
-			//@templ.Raw(editing.GetEditScripts(data))
+			@templ.Raw(editing.GetEditScripts(data))
 		</head>
 		<body class="font-primary font-light text-scblack">
 			{ children... }
@@ -32,6 +33,5 @@ templ Base(data model.Rendered) {
 
 func GetBrowserTitle(data model.RouteData) string {
 	title := fields.GetFieldWithFallback(data.Fields, "Title", "NavigationTitle", "DisplayName")
-	fmt.Printf("GetBrowserTitle: [%s]", title)
 	return fmt.Sprintf("%s", title)
 }
